--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Jekflix | A theme for Jekyll
 email: youremail@xyz.com
 description: Some text about your blog.
-baseurl: "/jekflix-template" # the subpath of your site, e.g. /blog
-url: "https://www.rossener.com" # the base hostname & protocol for your site
+baseurl: "/flix" # the subpath of your site, e.g. /blog
+url: "https://doltegg.github.io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
@@ -24,7 +24,7 @@ medium_username: medium_username
 markdown: kramdown
 highlighter: rouge
 permalink: /:title/
-paginate: 12
+paginate: 8
 paginate_path: "/page/:num/"
 svg_color: "#ff0a16"
 
