--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Jekflix | A theme for Jekyll
 email: youremail@xyz.com
 description: Some text about your blog.
 baseurl: "/flix" # the subpath of your site, e.g. /blog
-url: "https://doltegg.github.io/flix" # the base hostname & protocol for your site
+url: "https://doltegg.github.io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
@@ -25,7 +25,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:title/
 paginate: 8
-paginate_path: "/page/:num/"
+paginate_path: "/flix/page/:num/"
 svg_color: "#ff0a16"
 
 # Plugins
