--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:title/
 paginate: 8
-paginate_path: "/page/:num/"
+paginate_path: "/flix/page:num/"
 svg_color: "#ff0a16"
 
 # Plugins
