--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,11 @@ plugins:
 # Links to include in menu navigation
 # For external links add external: true
 links:
-  - title: Home
+  - title: 首頁
     url: /
+  - tags: 標籤
   - title: About
-    url: /about/
+      url: /about/
   - title: Contact
     url: /contact/
 
