--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@ disqus_username: disqus_username
 
 # Social Media
 # Remove the item if you don't need it
-github_username: github_username
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+# github_username: github_username
+# facebook_username: facebook_username
+# twitter_username: twitter_username
+# instagram_username: instagram_username
+# linkedin_username: linkedin_username
+# medium_username: medium_username
 
 # Build settings
 markdown: kramdown
@@ -38,7 +38,8 @@ plugins:
 links:
   - title: 首頁
     url: /
-  - tags: 標籤
+  - title: 標籤
+    url:/ /tags/
   - title: About
       url: /about/
   - title: Contact
